add distinct company names endpoint
